--- a/build
+++ b/build
@@ -1,3 +1,3 @@
 #!/usr/bin/env bash
 
-ghc src/Bridge.hs src/Client.hs src/Main.hs -o bin/Skellbot
+ghc src/Bridge.hs src/Client.hs src/Main.hs -o bin/Main
