breaking things apart

--- a/build
+++ b/build
@@ -1,3 +1,5 @@
 #!/usr/bin/env bash
 
-ghc src/Bridge.hs src/Client.hs src/Main.hs -o bin/Main
+ghc \
+    src/Types.hs src/Chat.hs src/Bridge.hs src/Client.hs src/Main.hs \
+    -o bin/Main
